style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    font-size: 16px;
    font-family: 'Poppins', sans-serif;
    --black-100: #002721;
    --black-75: #405D58;
    --black-50: #809390;
    --black-25: #BFC9C7;
    --black-10: #E6E9E9;
    --black-5: #F2F4F4;
    color: var(--black-100);
}

h1 {
    font-size: 2.027rem;
}

h2 {
    font-size: 1.802rem;
    margin: 1rem 0 1.5rem 0;
    font-weight: 600;
}

h3 {
    font-size: 1.602rem;
}

h4 {
    font-size: 1.424rem;
    font-weight: 600;
}

h5 {
    font-size: 1.266rem;
    font-weight: 600;
}

h6 {
    font-size: 1.125rem;
    font-weight: 500;
}

p {
    font-size: 1rem;
    line-height: 1.5;
    color: var(--black-75);
}

a {
    color: inherit;
    text-decoration: none;
}

button {
    cursor: pointer;
}

button:active {
    background-color: var(--black-5) !important;
}

.container {
    max-width: 660px;
    margin: 0 auto;
}

img {
    width: 100%;
}

ul {
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

ul.nav-list {
    margin: 4rem 0;
    padding: 0 2rem;
}

ul.nav-list li a {
    text-decoration: none;
    font-weight: 500;
    font-size: 0.938rem;
    color: var(--black-50);
}

ul.nav-list li a:hover {
    color: var(--black-100);
}

ul.nav-list li {
    position: relative;
}

ul.nav-list li.active a {
    color: var(--black-100);
}

ul.nav-list li.active::after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: -8px;
    display: block;
    width: 4px;
    height: 4px;
    border-radius: 100%;
    background-color: var(--black-100);
    margin-top: 4px;
}

#parent {
    margin: 8rem 0 2rem 0;
    display: flex;
    flex-direction: column;
    gap: 8rem;
}

section#hero .avatar img {
    width: 12rem;
    height: 12rem;
    border-radius: 100%;
    object-fit: cover;
    border: 1px solid var(--black-10);
}

#hero .avatar {
    margin-bottom: 3rem;
}

a.underlined {
    text-decoration: underline;
    text-underline-offset: 4px;
    text-decoration-thickness: 2px;
    text-decoration-color: var(--black-25);
}

section.showcase {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.showcase .card {
    display: flex;
    gap: 2rem;
    margin-bottom: 2rem;
}

.showcase .card .text-content {
    flex: 1;
}


.card .text-content h5 a:hover {
    text-decoration: underline;
}

.card .text-content .date {
    display: inline-block;
    font-size: 0.875rem;
    color: var(--black-50);
    margin-bottom: 0.25rem;
}

.showcase .card .image-content {
    width: 8rem;
    height: 9rem;
    background: var(--black-5);
    border-radius: 0.5rem;
    overflow: hidden;
    margin: 1.75rem 0;
}

.showcase .card .image-content img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    object-position: center 2rem;
}



#cta .wrapper-cta {
    padding: 2rem;
    background-color: var(--black-5);
    border-radius: 0.5rem;
    display: flex;
}

#cta .wrapper-cta .content-part {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
}

#cta .wrapper-cta .image-part {
    width: 8rem;
    height: 9rem;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--black-10);
    border-radius: 0.5rem;
}

.wrapper-cta .image-part svg {
    width: 4rem;
    height: 4rem;
    color: var(--black-100);
}

.content-part .emailbox {
    display: flex;
    gap: 1rem;
}

.content-part .emailbox input,
.content-part .emailbox button {
    padding: 0.5rem 1rem;
    border: 1px solid var(--black-10);
    outline-color: var(--black-25);
    font: inherit;
    border-radius: 0.375rem;
    background: white;
}

#main-footer .footer-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.footer-wrapper .text-and-links a {
    margin-right: 1.5rem;
}

.footer-wrapper .feedback-rating {
    text-align: right;
}

